fixed image alignment

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -124,12 +124,19 @@ a:hover {
   }
 }
 
+.grid {
+  max-width: 69em;
+  list-style: none;
+  margin: 30px auto;
+  padding: 1;
+}
+
 .grid-item {
   width: 231px;
   margin-bottom: 10px;
-
 }
+
 .grid-item > img {
-// width: 100%;
-display: block;
+  width: 100%;
+  display: block;
 }
